--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -57,10 +57,11 @@
 		<span style="padding:5px 0px;display: inline-block;">安全用药</span>
 		<ul class="list-group">
 			<li class="list-group-item">
-		  		<a href="">
+		  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
   			  		<span>安全用药量表</span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">共4项用药禁忌</span>
+  					<span class="right orange sl8" ms-if="d.caprini!=''">{{d.caprini}}</span>
+  					<span class="right orange sl8">点击请填写</span>
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
@@ -102,21 +103,21 @@
 			<span style="padding:5px 0px;display: inline-block;">长期登记量表</span>
 			<ul class="list-group">
 				<li class="list-group-item">
-			  		<a href="/gakf/before.html">
+			  		<a ms-href="/gakf/before.html?sick_id={{d.sickId}}">
 	  			  		<span>术前骨科筛查量表</span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   						<span class="right orange sl8">点击请填写</span>
 			  		</a>
 			 	</li>
 			 	<li class="list-group-item">
-			  		<a href="/gakf/between.html">
+			  		<a ms-href="/gakf/between.html?sick_id={{d.sickId}}">
 	  			  		<span>术中骨科筛查量表</span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
 	  					<span class="right orange sl8">点击请填写</span>
 			  		</a>
 			 	</li>
 			 	<li class="list-group-item">
-			  		<a href="/gakf/after.html">
+			  		<a ms-href="/gakf/after.html?sick_id={{d.sickId}}">
 	  			  		<span>术后骨科筛查量表</span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
 	  					<span class="right orange sl8">点击请填写</span>
