xiu gai liu cheng

--- a/node/public/gakf/recommend.html
+++ b/node/public/gakf/recommend.html
@@ -19,7 +19,7 @@
 		  		<span>抗生素</span>
 		  	</div>
 		  	<div class="col-xs-5">
-		  		<a href="#">
+		  		<a href="/gakf/reason.html">
 		  			<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right  sl8 orange">2项理由</span>
   				</a>
