--- a/node/public/gakf/addSick.html
+++ b/node/public/gakf/addSick.html
@@ -66,69 +66,56 @@
 		</ul>
 		<span style="padding:5px 0px;display: inline-block;">安全用药</span>
 		<ul class="list-group">
-			<li class="list-group-item">
-		  		<a href="">
-  			  		<span>安全用药量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">共4项用药禁忌</span>
-		  		</a>
-		 	</li>
-		 	<li class="list-group-item">
-		  		<a href="">
-  			  		<span>安全用药建议 </span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">共3条建议</span>
-		  		</a>
-		 	</li>
-		</ul>
-		<span style="padding:5px 0px;display: inline-block;">医学量表</span>
-		<ul class="list-group">
-			<li class="list-group-item">
-		  		<a href="">
-  			  		<span>Caprini 量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">高危</span>
-		  		</a>
-		 	</li>
-		 	<li class="list-group-item">
-		  		<a href="">
-  			  		<span>膝关节HSS评分 </span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">点击请填写</span>
-		  		</a>
-		 	</li>
-		</ul>
-		<span style="padding:5px 0px;display: inline-block;">长期登记量表</span>
-
-		<ul class="list-group">
-			<li class="list-group-item">
-		  		<a href="">
-  			  		<span>术前骨科筛查量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">点击请填写</span>
-		  		</a>
-		 	</li>
-		 	<li class="list-group-item">
-		  		<a href="">
-  			  		<span>术前骨科筛查量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">点击请填写</span>
-		  		</a>
-		 	</li>
-		</ul>
+				<li class="list-group-item">
+			  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
+	  			  		<span>安全用药量表</span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8">点击请填写</span>
+			  		</a>
+			 	</li>
+			 	<li class="list-group-item">
+			  		<a ms-href="/gakf/recommend.html?sick_id={{d.sickId}}">
+	  			  		<span>安全用药建议 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8">没有推荐</span>
+			  		</a>
+			 	</li>
+			</ul>
+			<span style="padding:5px 0px;display: inline-block;">医学量表</span>
+			<ul class="list-group">
+				<li class="list-group-item">
+			  		<a ms-href="/gakf/caprini.html?sick_id={{d.sickId}}">
+	  			  		<span>Caprini 量表</span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8">点击请填写</span>
+			  		</a>
+			 	</li>
+			 	<li class="list-group-item">
+			  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
+	  			  		<span>膝关节HSS评分 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" >点击请填写</span>
+			  		</a>
+			 	</li>
+			 	<li class="list-group-item">
+			  		<a ms-href="/gakf/rapt.html?sick_id={{d.sickId}}">
+	  			  		<span>创伤RAPT量表 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" >点击请填写</span>
+			  		</a>
+			 	</li>
+			</ul>
+		</div>
 		<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
 		  <div class="container text-center" style="height: 42px; line-height: 42px;"> 
-		  	<div class="col-xs-6">
+		  	<div class="col-xs-12">
 		  		<span style="color:#fff;" ms-click="save">保存</span>
-		  	</div>
-		  	<div class="col-xs-6">
-		  		<span style="color:#fff;" ms-click="print">查房</span>
 		  	</div>
 		  </div>
 		</nav>
 	</div>
 	<script type="text/javascript">
-	require(["bootstrap","avalon"],function(){
+	require(["store","bootstrap","avalon"],function(store){
 			var data = {
 	            "name":"",
 	            "age":"",
@@ -143,9 +130,9 @@
 	            "out_day":"",
 	            "doctor_name": ""
 			}
-			var temp = RC.parseOptions(window.location.href);
+			var temp = store.get("user");
 			var id = temp.id,doctor_id = temp.doctor_id;
-
+			data.sickId = id;
 
 			var vmodel = avalon.define({
 	          $id: "test",
@@ -158,9 +145,8 @@
 					dataType: "json", 
 					data:{sick:d},
 					success: function(d){
-						console.log(d.success);
 						if(d.success){
-							window.location.href= "sick.html?doctor_id="+d.content.doctor_id;
+							//window.location.href= "sick.html?doctor_id="+d.content.doctor_id;
 						}
 		    		},
 		    		error:function(){
