--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -35,9 +35,9 @@
 		
 		<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
 		  <div class="container">
-		    <a href="javascript:void(0)" id="addSick">
+		    <!-- <a href="javascript:void(0)" id="addSick">
 		    	<span class="glyphicon glyphicon-plus-sign text left"></span>
-		    </a>
+		    </a> -->
 		    <span class="glyphicon glyphicon-qrcode text right" ></span>
 		  </div>
 		</nav>
