--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -60,15 +60,16 @@
 		  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
   			  		<span>安全用药量表</span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.caprini!=''">{{d.caprini}}</span>
+  					<span class="right orange sl8" ms-if="d.taboos!=''">{{d.taboos}}</span>
   					<span class="right orange sl8">点击请填写</span>
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
-		  		<a href="">
+		  		<a ms-href="/gakf/recommend.html?sick_id={{d.sickId}}">
   			  		<span>安全用药建议 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">共3条建议</span>
+  					<span class="right orange sl8" ms-if="d.recommend!=''">{{d.recommend}}</span>
+  					<span class="right orange sl8">没有推荐</span>
 		  		</a>
 		 	</li>
 		</ul>
