--- a/node/public/gakf/caprini.html
+++ b/node/public/gakf/caprini.html
@@ -12,9 +12,10 @@
 </head>
 <body ms-controller="test" class="ms-controller">
 	<div class="" id="gradeList">
-		<span style="margin: 10px;display: inline-block;">{{d.summary|html}}</span>
+		<span class="my-title" ms-if="d.summary!=''">{{d.summary|html}}</span>
+		<div class="spacer5" ms-if="d.summary==''"></div>
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
-			<span style="margin: 10px;display: inline-block;">{{el.title}}</span>
+			<span class="my-title">{{el.title}}</span>
 			<ul class="list-group " ms-if="el.type == 'checkbox'">
 			  <li class="list-group-item checkbox" ms-repeat-el="el.keys"  ms-click="click">
 			  	<div class="col-xs-8">
