--- a/node/public/gakf/hss_right.html
+++ b/node/public/gakf/hss_right.html
@@ -24,9 +24,10 @@
 		  </div>
 		</nav>
 		<div style="margin-top:45px;"></div>
-		<span style="margin: 10px;display: inline-block;">{{d.summary}}</span>
+		<span class="my-title" ms-if="d.summary!=''">{{d.summary}}</span>
+		<div class="spacer5" ms-if="d.summary==''"></div>
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
-			<span style="margin: 10px;display: inline-block;">{{el.title}}</span>
+			<span class="my-title">{{el.title}}</span>
 			<ul class="list-group " ms-if="el.type == 'checkbox'">
 			  <li class="list-group-item checkbox" ms-repeat-el="el.keys"  ms-click="click">
 			  	<div class="col-xs-8">
