--- a/node/public/gakf/question.html
+++ b/node/public/gakf/question.html
@@ -80,7 +80,7 @@
 			</ul>
 		</div>
 	</div>
-	<form action="/answer/speak" method="post" id="askFrom" ms-visible="d.type != 'doctor' && d.localType =='doctor' ">
+	<form action="/answer/speak" method="post" id="askFrom" ms-if="d.type != 'doctor' && d.localType =='doctor' ">
 		<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
 		  <div class="container text-center" style="height: 42px; line-height: 42px;">
 		    <div class="row">
