--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -143,7 +143,7 @@
 	    <div class="row">
 	    	<div class="col-xs-12">
 
-	    		<a ms-href="/gakf/check.html?sick_id={{d.id}}&doctor_id={{d.doctor_id}}">
+	    		<a ms-href="/gakf/check.html?sick_id={{d.sickId}}&doctor_id={{d.doctor_id}}">
 			    	<span style="color:#fff;" >查房</span>
 			    </a>
 	    	</div>
