sick info eidth

--- a/node/public/gakf/login.html
+++ b/node/public/gakf/login.html
@@ -15,7 +15,7 @@
 			<div class="spacer15"></div>
 			<div class="header-con" id="header-con">
 				<span class="header l selected" alt="0">我是医生</span>
-				<span class="header r" alt="1">我是病人</span>
+				<span class="header r" alt="1">我是患者</span>
 			</div>
 		</div>
 		<form id="signForm" method="post" action="/user/login">
