--- a/node/public/gakf/rapt.html
+++ b/node/public/gakf/rapt.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
-	<title>创伤RAPT量表</title>
+	<title>VTE量表</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
 	<script type="text/javascript" src="./static/js/require.js"></script>
@@ -11,6 +11,17 @@
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
 <body ms-controller="test" class="ms-controller">
+	<nav class="navbar navbar-default navbar-fixed-top my-nav my-nav-top">
+	  <div id="my-tab">
+	    <div class="col-xs-6 text-center my-nav-line selected">
+	    	<a href="javascript:void(0)">RAPT 量表</a>
+	    </div>
+	    <div class="col-xs-6 text-center my-nav-line">
+	    	<a ms-href="/gakf/caprini.html?sick_id={{d.id}}">Caprini 量表</a>
+	    </div>
+	  </div>
+	</nav>
+	<div style="margin-top:45px;"></div>
 	<div class="" id="gradeList">
 		<div class="spacer5" ></div>
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
