--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -61,7 +61,7 @@
   			  		<span>安全用药量表</span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.taboos!=''">{{d.taboos}}</span>
-  					<span class="right orange sl8" ms-if="!d.taboos">暂无结果</span>
+  					<span class="right orange sl8" ms-if="!d.taboos">共4项用药禁忌</span>
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
@@ -69,7 +69,7 @@
   			  		<span>安全用药建议 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.recommend!=''">{{d.recommend}}</span>
-  					<span class="right orange sl8" ms-if="!d.recommend">无推荐</span>
+  					<span class="right orange sl8" ms-if="!d.recommend">共3条建议</span>
 		  		</a>
 		 	</li>
 		</ul>
@@ -80,7 +80,7 @@
   			  		<span>VTE评分</span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.caprini!=''">{{d.caprini}}</span>
-  					<span class="right orange sl8" ms-if="!d.caprini">暂无结果</span>
+  					<span class="right orange sl8" ms-if="!d.caprini">极高危</span>
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
@@ -88,7 +88,7 @@
   			  		<span>膝关节HSS评分 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
-  					<span class="right orange sl8" ms-if="!d.hss">暂无结果</span>
+  					<span class="right orange sl8" ms-if="!d.hss">86</span>
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
@@ -96,7 +96,7 @@
   			  		<span>出血评分 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.rapt!=''">{{d.rapt}}</span>
-  					<span class="right orange sl8" ms-if="!d.rapt">暂无结果</span>
+  					<span class="right orange sl8" ms-if="!d.rapt">高出血倾向</span>
 		  		</a>
 		 	</li>
 		</ul>
