--- a/node/public/gakf/addSick.html
+++ b/node/public/gakf/addSick.html
@@ -70,14 +70,7 @@
 			  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
 	  			  		<span>安全用药量表</span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-	  					<span class="right orange sl8">点击请填写</span>
-			  		</a>
-			 	</li>
-			 	<li class="list-group-item">
-			  		<a ms-href="/gakf/recommend.html?sick_id={{d.sickId}}">
-	  			  		<span>安全用药建议 </span>
-	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-	  					<span class="right orange sl8">没有推荐</span>
+	  					<span class="right orange sl8">点击填写</span>
 			  		</a>
 			 	</li>
 			</ul>
@@ -87,21 +80,21 @@
 			  		<a ms-href="/gakf/caprini.html?sick_id={{d.sickId}}">
 	  			  		<span>Caprini 量表</span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-	  					<span class="right orange sl8">点击请填写</span>
+	  					<span class="right orange sl8">点击填写</span>
 			  		</a>
 			 	</li>
-			 	<li class="list-group-item">
+			 	<!-- <li class="list-group-item">
 			  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
 	  			  		<span>膝关节HSS评分 </span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-	  					<span class="right orange sl8" >点击请填写</span>
+	  					<span class="right orange sl8" >点击填写</span>
 			  		</a>
-			 	</li>
+			 	</li> -->
 			 	<li class="list-group-item">
 			  		<a ms-href="/gakf/rapt.html?sick_id={{d.sickId}}">
 	  			  		<span>创伤RAPT量表 </span>
 	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-	  					<span class="right orange sl8" >点击请填写</span>
+	  					<span class="right orange sl8" >点击填写</span>
 			  		</a>
 			 	</li>
 			</ul>
