fix sick loglin 302

--- a/node/public/gakf/addSick.html
+++ b/node/public/gakf/addSick.html
@@ -11,7 +11,8 @@
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
 <body ms-controller="test" class="ms-controller">
-	<div class="container">
+	<div class="container ">
+		<div class="spacer10"></div>
 		<ul class="list-group">
 		  <li class="list-group-item">
 		  	<span>主治医生</span>
@@ -106,6 +107,8 @@
 			 	</li>
 			</ul>
 		</div>
+		
+		<div class="spacer10"></div>
 		<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
 		  <div class="container text-center" style="height: 42px; line-height: 42px;"> 
 		  	<div class="col-xs-12">
