--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -3,155 +3,220 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
-	<title>住院信息</title>
+	<title>患者信息</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
-
-	<script type="text/javascript" src="./static/js/require.js"></script>
+	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
+	<script  type="text/javascript" src="./static/js/require.js"></script>
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
-	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
-	<style type="text/css">
-	.my-media img{
-		width: 70px;
-		height: 70px;
-	}
-	.my-media .content{
-		padding-left: 80px;
-	}
-	</style>
 </head>
 <body ms-controller="test" class="ms-controller">
-	<div class="">
-		<div class="panel">
-			<div class="panel-body my-media">
-				<div class="left">
-					<img class="media-object" src="./static/images/doc.jpg" alt="...">
-				</div>
-				<div class="right">
-					<div class="spacer15"></div>
-					<span class=" glyphicon glyphicon-chevron-right gray_arrow"></span>
-				</div>
-				<div class="content">
-					<div class="spacer15"></div>
-					主治医生：<span class="orange">{{d.doctor_name}}</span> 
-					<div class="spacer5"></div>
-					{{d.title}}
-				</div>
-			</div>
-		</div>
+	<div class="container ">
+		<div class="spacer10"></div>
+		<ul class="list-group">
+		  <li class="list-group-item">
+		  	<span>主治医生</span>
+		  	<span class="right" ms-duplex="d.doctor_name">{{d.doctor_name}}</span>
+		  </li>
+		</ul>
 		<div class="spacer10"></div>
 		<ul class="list-group">
 		  <li class="list-group-item gray">
 		  	<span>患者姓名</span>
-		  	<span class="right">{{d.name}}</span>
+		  	<input class="right text-right my-input1 gray" type="text" placeholder="姓名" ms-duplex="d.name" />
 		  </li>
 		  <li class="list-group-item">
 		  	<span>年龄</span>
-		  	<span class="right">{{d.age}}岁</span>
+		  	<input class="right text-right my-input1" type="text" placeholder="年龄" ms-duplex="d.age"/>
 		  </li>
-		  <li class="list-group-item gray">
-		  	<span>性别</span>
-		  	<span class="right">{{d.gender}}</span>
+		  <li class="list-group-item gray my-collapse" >
+		  	<a href="#sexDom"  data-toggle="collapse" >
+		  		<span>性别</span>
+		  	 	<span class="right detail" class="" >{{d.gender}}</span>
+		  	 	<input type="hidden" class="detailInput" value="男" ms-duplex-string="d.gender">
+		  	</a>
+			<div id="sexDom" class="panel-collapse collapse text-center" role="tabpanel" >
+				<div class="secondCon" alt="男">男</div>
+				<div class="secondCon" alt="女">女</div>
+			</div>
 		  </li>
-		  <li class="list-group-item">
-		  	<span>手术类型</span>
-		  	<span class="right">{{d.operate_type}}</span>
+		  <li class="list-group-item my-collapse">
+		  	<a href="#operate_type"  data-toggle="collapse" >
+			  	<span>手术类型</span>
+			  	<span class="right detail" class="" >创伤手术</span>
+		  	 	<input type="hidden" class="detailInput" value="" ms-duplex-string="d.operate_type">
+		  	</a>
+		  	<div id="operate_type" class="panel-collapse collapse text-center" role="tabpanel" >
+				<div class="secondCon" ms-repeat-el="d.operate_type_arr" ms-attr-alt="{{el}}">{{el}}</div>
+			</div>
 		  </li>
-		  <li class="list-group-item gray">
-		  	<span>护理级别</span>
-		  	<span class="right">{{d.care_level}}</span>
+		  <li class="list-group-item gray my-collapse">
+		  	<a href="#care_level" data-toggle="collapse" >
+			  	<span>护理级别</span>
+			  	<span class="right detail" class="" >高危</span>
+		  	 	<input type="hidden" class="detailInput" value="" ms-duplex-string="d.care_level">
+			</a>
+			<div id="care_level" class="panel-collapse collapse text-center" role="tabpanel" >
+				<div class="secondCon" ms-repeat-el="d.care_level_arr" ms-attr-alt="{{el}}">{{el}}</div>
+			</div>
 		  </li>
 		  <li class="list-group-item">
 		  	<span>床号</span>
-			<span class="right">{{d.bed_id}}</span>
+			<input class="right text-right my-input1" type="text" placeholder="床号" ms-duplex="d.bed_id" />
 		  </li>
 		  <li class="list-group-item gray">
 		  	<span>入院日期</span>
-		  	<span class="right">{{ d.in_day | date("yyyy年MM月dd日")}}</span>
+		  	<input class="right text-right my-input1" ms-duplex="d.in_day" >
 		  </li>
 		  <li class="list-group-item">
 		  	<span>出院日期</span>
-			<span class="right">{{d.out_day | date("yyyy年MM月dd日")}}</span>
+		  	<input class="right text-right my-input1" ms-duplex="d.out_day" >
 		  </li>
 		</ul>
-		<span style="padding:5px 15px;display: inline-block;">安全用药</span>
+		<span style="padding:5px 0px;display: inline-block;">安全用药</span>
 		<ul class="list-group">
-			<li class="list-group-item">
-		  		<a href="">
-  			  		<span>安全用药量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">共4项用药禁忌</span>
-		  		</a>
-		 	</li>
-		 	<li class="list-group-item">
-		  		<a href="">
-  			  		<span>安全用药建议 </span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">共3条建议</span>
-		  		</a>
-		 	</li>
-		</ul>
-		<span style="padding:5px 15px;display: inline-block;">医学量表</span>
-		<ul class="list-group">
-			<li class="list-group-item">
-		  		<a href="">
-  			  		<span>Caprini 量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">高危</span>
-		  		</a>
-		 	</li>
-		 	<li class="list-group-item">
-		  		<a href="">
-  			  		<span>膝关节HSS评分 </span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">点击请填写</span>
-		  		</a>
-		 	</li>
-		</ul>
-		<span style="padding:5px 15px;display: inline-block;">长期登记量表</span>
-
-		<ul class="list-group">
-			<li class="list-group-item">
-		  		<a href="">
-  			  		<span>术前骨科筛查量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">点击请填写</span>
-		  		</a>
-		 	</li>
-		 	<li class="list-group-item">
-		  		<a href="">
-  			  		<span>术前骨科筛查量表</span>
-  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8">点击请填写</span>
-		  		</a>
-		 	</li>
-		</ul>
+				<li class="list-group-item">
+			  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
+	  			  		<span>安全用药量表</span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8">点击填写</span>
+			  		</a>
+			 	</li>
+			</ul>
+			<span style="padding:5px 0px;display: inline-block;">医学量表</span>
+			<ul class="list-group">
+				<!-- <li class="list-group-item">
+			  		<a ms-href="/gakf/caprini.html?sick_id={{d.sickId}}">
+	  			  		<span>Caprini 量表</span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8">点击填写</span>
+			  		</a>
+			 	</li> -->
+			 	<!-- <li class="list-group-item">
+			  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
+	  			  		<span>膝关节HSS评分 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" >点击填写</span>
+			  		</a>
+			 	</li> -->
+			 	<!-- <li class="list-group-item">
+			  		<a ms-href="/gakf/rapt.html?sick_id={{d.sickId}}">
+	  			  		<span>创伤RAPT量表 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" >点击填写</span>
+			  		</a>
+			 	</li> -->
+			 	<li class="list-group-item">
+			  		<a ms-href="{{d.vteUrl}}">
+	  			  		<span>VTE量表 </span>
+	  					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right orange sl8" >点击填写</span>
+			  		</a>
+			 	</li>
+			</ul>
+		</div>
 		
+		<div class="spacer10"></div>
+		<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
+		  <div class="container text-center" style="height: 42px; line-height: 42px;"> 
+		  	<div class="col-xs-12">
+		  		<span style="color:#fff;" ms-click="save">保存</span>
+		  	</div>
+		  </div>
+		</nav>
 	</div>
-	
 	<script type="text/javascript">
+	require(["store","bootstrap","avalon"],function(store){
+			var data = {
+	            "name":"",
+	            "age":"",
+	            "gender":"男",
+	            "doctor_id":+RC.parseOptions(window.location.href).doctor_id,
+	            "operate_type_arr":["创伤手术","关节手术"],
+	            "operate_type":"创伤手术",
+	            "care_level_arr":["高危"],
+	            "care_level":"高危",
+	            "bed_id":"",
+	            "in_day":"",
+	            "out_day":"",
+	            "doctor_name": "",
+	            "vteUrl":"dd"
+			}
+			var temp = store.get("user");
+			var id = temp.id,doctor_id = temp.doctor_id;
+			data.sickId = id;
 
-	require(["store","upload","avalon"],function(store){
-		var data={},id=store.get("user").id;
-				
-			    var vmodel = avalon.define({
-			          $id: "test",
-			          d:data
-			    });
-			    avalon.scan();
-			    $.ajax({ 
-					type:"get",
-					url: "/sick/info?id="+id,
+			var vmodel = avalon.define({
+	          $id: "test",
+	          d:data,
+	          save:function(){
+	          	var d = JSON.stringify(vmodel.d.$model);
+	          	$.ajax({
+	          		type:"post",
+					url: "/sick/create",
 					dataType: "json", 
-					success: function(obj){
-						vmodel.d = obj.content;
+					data:{sick:d},
+					success: function(d){
+						if(d.success){
+							//window.location.href= "sick.html?doctor_id="+d.content.doctor_id;
+						}
 		    		},
 		    		error:function(){
 
 		    		}
-			}); 
+	          	})
+	          },
+	          print:function(){
+
+	          }
+		    });
+		    avalon.scan();
+		    if(doctor_id){
+				$.ajax({ 
+					type:"get",
+					url: "/doctor/info?doctor_id="+doctor_id,
+					dataType: "json", 
+					success: function(obj){
+						vmodel.d.doctor_name = obj.content.doctor_name;
+		    		},
+		    		error:function(){
+
+		    		}
+				}); 
+			}
+		    if(id){
+		    	$.ajax({ 
+					type:"get",
+					url: "/sick/info?id="+id,
+					dataType: "json", 
+					success: function(obj){
+						obj.content.in_day = new Date(obj.content.in_day).Format("yyyy-MM-dd");
+						obj.content.out_day = new Date(obj.content.out_day).Format("yyyy-MM-dd");
+						vmodel.d = $.extend(data,obj.content);
 
 
+						setUrl();
+
+		    		},
+		    		error:function(){
+
+		    		}
+				}); 
+		    }
+		    function setUrl(){
+		    	if(vmodel.d.operate_type=="关节手术"){
+					vmodel.d.vteUrl = "/gakf/caprini.html?sick_id="+data.sickId;
+				}else if(vmodel.d.operate_type=="创伤手术"){
+				    vmodel.d.vteUrl = "/gakf/rapt.html?sick_id="+data.sickId;
+				}
+		    }
+		    $(".my-collapse").on("touchstart",".secondCon",function(){
+				var p =$(this).parent().parent();
+				p.find(".detail").html($(this).html());
+				p.find(".detailInput").val($(this).attr("alt"));
+				p.find(".collapse").collapse('hide');
+				setUrl();
+			});
 	});
 	</script>
 </body>
