--- a/node/public/gakf/caprini.html
+++ b/node/public/gakf/caprini.html
@@ -90,6 +90,7 @@
 					var d = obj.content.value;
 					d.isshow = data.isshow;
 					d.id = id;
+					d.type = temp.type;
 					RC.setvmodel(d,tempobj);
 					RC.setItem(d);
 					
