--- a/node/public/gakf/recommend.html
+++ b/node/public/gakf/recommend.html
@@ -6,92 +6,85 @@
 	<title>用药推荐</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
+	<script type="text/javascript" src="./static/js/require.js"></script>
+	<script type="text/javascript" src="./static/js/main.js"></script>
+	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
-<body>
+<body ms-controller="test" class="ms-controller">
 	<div class="container">
 		<span style="padding:5px 0px;display: inline-block;">禁用</span>
 		<ul class="list-group">
-		  <li class="list-group-item">
-		  	<div class="col-xs-3">
-		  		<span>阿莫西林</span>
-		  	</div>
-		  	<div class="col-xs-4">
-		  		<span>抗生素</span>
-		  	</div>
-		  	<div class="col-xs-5">
-		  		<a href="/gakf/reason.html">
-		  			<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right  sl8 orange">2项理由</span>
-  				</a>
-		  	</div>
-		  </li>
-		  <li class="list-group-item">
-		  	<div class="col-xs-3">
-		  		<span>阿莫西林</span>
-		  	</div>
-		  	<div class="col-xs-4">
-		  		<span>抗生素</span>
-		  	</div>
-		  	<div class="col-xs-5">
-		  		<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  				<span class="right  sl8 orange">2项理由</span>
-		  	</div>
-		  </li>
+			  <li class="list-group-item" ms-repeat-el="d" ms-if-loop="el.t == 'f'"  >
+			  	
+			  	<div class="col-xs-5">
+			  		<span>{{el.name}}</span>
+			  	</div>
+			  	<div class="col-xs-3 text-center" >
+			  		<span>{{el.type}}</span>
+			  	</div>
+			  	<div class="col-xs-4">
+			  		<a ms-href="/gakf/reason.html?id={{el.id}}" ms-attr-alt="$index" ms-click="click($index)">
+			  			<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
+	  					<span class="right  sl8 orange">{{el.count}}项理由</span>
+	  				</a>
+			  	</div>
+			  </li>
 		</ul>
-		<span style="padding:5px 0px;display: inline-block;">可选</span>
+		<span style="padding:5px 0px;display: inline-block;">推荐</span>
 		<ul class="list-group">
-		  <li class="list-group-item">
-		  	<div class="col-xs-3">
-		  		<span>阿莫西林</span>
-		  	</div>
-		  	<div class="col-xs-4">
-		  		<span>抗生素</span>
-		  	</div>
-		  	<div class="col-xs-5">
-		  		<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  				<span class="right  sl8 orange">2项理由</span>
-		  	</div>
-		  </li>
-		  <li class="list-group-item">
-		  	<div class="col-xs-3">
-		  		<span>阿莫西林</span>
-		  	</div>
-		  	<div class="col-xs-4">
-		  		<span>抗生素</span>
-		  	</div>
-		  	<div class="col-xs-5">
-		  		<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  				<span class="right  sl8 orange">2项理由</span>
-		  	</div>
-		  </li>
-		</ul>
-		<span style="padding:5px 0px;display: inline-block;">慎用</span>
-		<ul class="list-group">
-		  <li class="list-group-item">
-		  	<div class="col-xs-3">
-		  		<span>阿莫西林</span>
-		  	</div>
-		  	<div class="col-xs-4">
-		  		<span>抗生素</span>
-		  	</div>
-		  	<div class="col-xs-5">
-		  		<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  				<span class="right  sl8 orange">2项理由</span>
-		  	</div>
-		  </li>
-		  <li class="list-group-item">
-		  	<div class="col-xs-3">
-		  		<span>阿莫西林</span>
-		  	</div>
-		  	<div class="col-xs-4">
-		  		<span>抗生素</span>
-		  	</div>
-		  	<div class="col-xs-5">
-		  		<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  				<span class="right  sl8 orange">2项理由</span>
-		  	</div>
-		  </li>
+			  <li class="list-group-item" ms-repeat-el="d" ms-if-loop="el.t == 's'"  >
+			  	
+			  	<div class="col-xs-8">
+			  		<span>{{el.name}}</span>
+			  	</div>
+			  	<div class="col-xs-4">
+			  		<span>{{el.type}}</span>
+			  	</div>
+			  </li>
 		</ul>
 	</div>
+	<script type="text/javascript">
+		require(["store","avalon"],function(store){
+			var id = RC.parseOptions(window.location.href).sick_id,data=[];
+			var vmodel = avalon.define({
+		          $id: "test",
+		          d:data,
+		          click:function(i){
+		          	var temp ={
+		          		r:vmodel.d[i].reason,
+		          		t:vmodel.d[i].name
+		          	}
+		          	store.set("reason",temp);
+		          }
+		    });
+		    avalon.scan();
+			$.ajax({ 
+				type:"get",
+				url: "/sick/sickdrug?sick_id="+id,
+				dataType: "json", 
+				success: function(obj){
+
+					var d = obj.content,dd={},temp=[];
+					for(var i=0;i<d.length;i++){
+
+						if(!dd[d[i].drug_name]){
+							dd[d[i].drug_name] = {name:d[i].drug_name,type:d[i].drug_type,reason:[d[i].drug_reason],count:1,t:d[i].type,id:d[i].id};
+						}else{
+							dd[d[i].drug_name].reason.push(d[i].drug_reason);
+							dd[d[i].drug_name].count = dd[d[i].drug_name].reason.length;
+						}
+					}
+					for(n in dd){
+						temp.push(dd[n]);
+					}
+					//data = $.extend(data,temp);
+					vmodel.d = temp;
+	    		},
+	    		error:function(){
+
+	    		}
+			});
+		});
+	</script>
 </body>
 </html>
