--- a/node/public/gakf/communicate.html
+++ b/node/public/gakf/communicate.html
@@ -32,7 +32,7 @@
 					<div class="text-center">
 						<span class="titleBg">{{v.message.day | dateFormat:'yyyy年 MM月 dd日 hh:mm:ss'}}</span>
 					</div>
-					<a href="question.html?session_id={{v.id}}">
+					<a href="question.html?session_id={{v.id}}&sick_id={{v.sick_id}}">
 					<div class="panel panel-default my-panel">
 					  <div class="panel-body">
 					  	<div class="h5" style="margin-top:0px;">{{v.message.title}}</div>
