--- a/node/public/gakf/taboos.html
+++ b/node/public/gakf/taboos.html
@@ -88,7 +88,7 @@
 			
 			$.ajax({ 
 				type:"get",
-				url: "/sick/sickstatus?table_type=sxjj&sick_id="+id,
+				url: "/sick/sickstatus?table_type=slywjj&sick_id="+id,
 				dataType: "json", 
 				success: function(obj){
 					obj.content.value = $.parseJSON(obj.content.value);
