--- a/node/public/gakf/after.html
+++ b/node/public/gakf/after.html
@@ -71,7 +71,7 @@
 			
 			$.ajax({ 
 				type:"get",
-				url: "/sick/sickstatus?table_type=after&sick_id="+id,
+				url: "/sick/sickstatus?table_type=shgksclb&sick_id="+id,
 				dataType: "json", 
 				success: function(obj){
 					obj.content.value = $.parseJSON(obj.content.value);
