--- a/node/public/gakf/taboos.html
+++ b/node/public/gakf/taboos.html
@@ -65,11 +65,11 @@
 	</nav>
 	<script type="text/javascript">
 		require(["store","avalon"],function(store){
-			$("#gradeList").on("touchstart",".checkbox",function(){
+			$("#gradeList").on("click",".checkbox",function(){
 				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
 			});
-			$("#gradeList").on("touchstart",".radio",function(){
+			$("#gradeList").on("click",".radio",function(){
 				var temp = $(this).find(".tag"),p=$(this).parent().parent();
 				if(p.data("selected"))RC.remove(p.data("selected"));
 				RC.selected(this,temp.attr("alt"));
