--- a/node/public/gakf/rapt.html
+++ b/node/public/gakf/rapt.html
@@ -76,13 +76,13 @@
 	</nav>
 	<script type="text/javascript">
 		require(["store","avalon"],function(store){
-			$("#gradeList").on("click",".checkbox",function(){
+			$("#gradeList").on("touchstart",".checkbox",function(){
 				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
 			});
 			var selected ;
 			
-			$("#gradeList").on("click",".radio",function(){
+			$("#gradeList").on("touchstart",".radio",function(){
 				var temp = $(this).find(".tag");
 				if(selected)RC.remove(selected);
 				RC.selected(this,temp.attr("alt"));
