--- a/node/public/gakf/hss_right.html
+++ b/node/public/gakf/hss_right.html
@@ -64,7 +64,7 @@
 	</nav>
 	<script type="text/javascript">
 		require(["store","avalon"],function(store){
-			$("#gradeList").on("click",".checkbox",function(){
+			$("#gradeList").on("touchstart",".checkbox",function(){
 				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
 			});
