--- a/node/public/gakf/rapt.html
+++ b/node/public/gakf/rapt.html
@@ -75,18 +75,19 @@
 	  </div>
 	</nav>
 	<script type="text/javascript">
-		require(["store","avalon"],function(store){
-			$("#gradeList").on("touchstart",".checkbox",function(){
+		require(["store","avalon","index"],function(store){
+			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
+			$("#gradeList").on("tap",".checkbox",function(){
 				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
 			});
 			var selected ;
 			
-			$("#gradeList").on("touchstart",".radio",function(){
+			$("#gradeList").on("tap",".radio",function(){
 				var temp = $(this).find(".tag");
 				if(selected)RC.remove(selected);
 				RC.selected(this,temp.attr("alt"));
-				selected = this
+				selected = this;
 			});
 
 			var data = {};
