--- a/node/public/gakf/taboos.html
+++ b/node/public/gakf/taboos.html
@@ -64,12 +64,13 @@
 	  </div>
 	</nav>
 	<script type="text/javascript">
-		require(["store","avalon"],function(store){
-			$("#gradeList").on("touchstart",".checkbox",function(){
+		require(["store","avalon","index"],function(store){
+			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
+			$("#gradeList").on("tap",".checkbox",function(){
 				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
 			});
-			$("#gradeList").on("touchstart",".radio",function(){
+			$("#gradeList").on("tap",".radio",function(){
 				var temp = $(this).find(".tag"),p=$(this).parent().parent();
 				if(p.data("selected"))RC.remove(p.data("selected"));
 				RC.selected(this,temp.attr("alt"));
