--- a/node/public/gakf/addSick.html
+++ b/node/public/gakf/addSick.html
@@ -117,6 +117,7 @@
 		  </div>
 		</nav>
 	</div>
+	<div  id ="commesCom" style="display:none;" class=" alert alert-success" role="alert"></div>
 	<script type="text/javascript">
 	require(["store","bootstrap","avalon"],function(store){
 			var data = {
@@ -151,6 +152,10 @@
 					success: function(d){
 						if(d.success){
 							//window.location.href= "sick.html?doctor_id="+d.content.doctor_id;
+							$("#commesCom").html("保存成功").show();
+							setTimeout(function(){
+								$("#commesCom").html("").hide();
+							},1000);
 						}
 		    		},
 		    		error:function(){
