--- a/node/public/gakf/recommend.html
+++ b/node/public/gakf/recommend.html
@@ -12,9 +12,10 @@
 </head>
 <body ms-controller="test" class="ms-controller">
 	<div class="container">
-		<span style="padding:5px 0px;display: inline-block;">禁用</span>
+		<span style="padding:5px 0px;display: inline-block;" >禁用</span>
+		<div style="padding:5px 0px;" ms-if="!d.isf">无禁用</div>
 		<ul class="list-group">
-			  <li class="list-group-item" ms-repeat-el="d" ms-if-loop="el.t == 'f'"  >
+			  <li class="list-group-item" ms-repeat-el="d.safe" ms-if-loop="el.t == 'f'"  >
 			  	
 			  	<div class="col-xs-5">
 			  		<span>{{el.name}}</span>
@@ -30,9 +31,10 @@
 			  	</div>
 			  </li>
 		</ul>
-		<span style="padding:5px 0px;display: inline-block;">推荐</span>
+		<span style="padding:5px 0px;display: inline-block;" >推荐</span>
+		<div style="padding:5px 0px;" ms-if="!d.iss">无推荐</div>
 		<ul class="list-group">
-			  <li class="list-group-item" ms-repeat-el="d" ms-if-loop="el.t == 's'"  >
+			  <li class="list-group-item" ms-repeat-el="d.safe" ms-if-loop="el.t == 's'"  >
 			  	
 			  	<div class="col-xs-8">
 			  		<span>{{el.name}}</span>
@@ -45,7 +47,7 @@
 	</div>
 	<script type="text/javascript">
 		require(["store","avalon"],function(store){
-			var id = RC.parseOptions(window.location.href).sick_id,data=[];
+			var id = RC.parseOptions(window.location.href).sick_id,data={};
 			var vmodel = avalon.define({
 		          $id: "test",
 		          d:data,
@@ -73,12 +75,18 @@
 							dd[d[i].drug_name].reason.push(d[i].drug_reason);
 							dd[d[i].drug_name].count = dd[d[i].drug_name].reason.length;
 						}
+						if(!data.iss && d[i].type == "s"){
+							data.iss = true;
+						}
+						if(!data.isf && d[i].type == "f"){
+							data.isf = true;
+						}
 					}
 					for(n in dd){
 						temp.push(dd[n]);
 					}
 					//data = $.extend(data,temp);
-					vmodel.d = temp;
+					vmodel.d =  $.extend(data,{safe:temp});//temp;
 	    		},
 	    		error:function(){
 
